@@ -38,5 +38,4 @@ static char rcsid[] = "$NetBSD: s_isnanf.c,v 1.4 1995/05/10 20:47:38 jtc Exp $";
 	ix = 0x7f800000 - ix;
 	return (int)(((u_int32_t)(ix))>>31);
 }
-hidden_def (__isnanf)
 weak_alias (__isnanf, isnanf)
